Everything except RTOS mostly finished

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <li>DMA <a href="beginner_course/05_dma/5_dma.html">[Online]</a> <a href="beginner_course/05_dma/5_dma.pdf">[PDF]</a></li>
             <li>ADC <a href="beginner_course/06_adc/6_adc.html">[Online]</a> <a href="beginner_course/06_adc/6_adc.pdf">[PDF]</a></li>
             <li>Timery <a href="beginner_course/07_timers/7_timers.html">[Online]</a> <a href="beginner_course/07_timers/7_timers.pdf">[PDF]</a></li>
-            <li>SPI <a href="#">[Online]</a> <a href="#">[PDF]</a></li>
-            <li>I2C <a href="#">[Online]</a> <a href="#">[PDF]</a></li>
+            <li>SPI <a href="beginner_course/07_timers/8_spi.html">[Online]</a> <a href="beginner_course/07_timers/8_spi.pdf">[PDF]</a></li>
+            <li>I2C <a href="beginner_course/07_timers/9_i2c.html">[Online]</a> <a href="beginner_course/07_timers/9_i2c.pdf">[PDF]</a></li>
             <li>RTOS <a href="#">[Online]</a> <a href="#">[PDF]</a></li>
         </ol>
 
