--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="display-1">Materiały STM32</div>
         <h2>Wojciech Olech</h2>
-        <h3><i>Work in progress - nie wszystkie materiały mogą być dostępne w tej chwili<i></h3>
+        <h3>WIP - 90% materiałów zrobione</h3>
         <br>
 
         <h2>Kurs STM32</h2>
