--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <li>RTOS <a href="#">[Online]</a> <a href="#">[PDF]</a></li>
         </ol>
 
+        <h2>Artykuły</h2>
+        <ol>
+            <li>Tworzenie bootloadera na platformę STM32 <a href="articles/bootloader/index.html">[Online]</a> <a href="articles/bootloader/STM32_Bootloader_Guide_SteelPh0enix.pdf">[PDF]</a></li>
+        </ol>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
