--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <h2>Artykuły</h2>
         <ol>
-            <li>Tworzenie bootloadera na platformę STM32 <a href="articles/bootloader/index.html">[Online]</a> <a href="articles/bootloader/STM32_Bootloader_Guide_SteelPh0enix.pdf">[PDF]</a></li>
+            <li>Tworzenie bootloadera na platformę STM32 <a href="articles/bootloader/">[Online]</a> <a href="articles/bootloader/STM32_Bootloader_Guide_SteelPh0enix.pdf">[PDF]</a></li>
         </ol>
 
     </div>
